@startuml
title UML Entreprise de vente

package Produit {

class Produit {
  reference : string {key}
  prixReference : float
  description : string
  extensionGarantie : boolean
  consommation[0..1]: integer
}

Description "1" --* Produit

class Description {
  poids : float
  couleur : string
  electrique : boolean
  fonctionnalité : string
}
Produit "0..*" --  "0..*" Produit : compatible avec

Marque "1" -- "*" Produit : fabrique >

class Marque {
	nom : string {key}
}

class Categorie {
	nom : string {key}
}

class SousCategorie {
	nom : string {local key}
}

SousCategorie "*" --* Categorie
Produit  "*" -- "1" SousCategorie : appartient à
}


class OccurenceProduit {
  numeroDeSerie : integer {key}
  prixAffiche : float
}

OccurenceProduit  "*" -- "1" Produit : correspond à

class Fournisseur {
	nom : string {key}
}

Fournisseur "1" -- "*" OccurenceProduit : fourni >

class Facture {
  numeroFacture : integer {key}
  totalsansRemise : float 
  remise : float
  supplement : float
  client : Client
  totalFinal() : float
}


class Client <<dataType>> { 
  numeroCarteIdentite :integer 
  nom : string 
  prenom : string 
  dateNaissance : string 
  adresseMail : string
  typeClient : ['Professionel', 'Particulier']
}


Facture "0..*" -- "1..*" OccurenceProduit : contient >


package Personnel {
  
abstract class Personnel {
  idPersonnel: integer {key}
  nom : string 
  prenom : string 
}

class PersonnelAchat{
}

class PersonnelVente{
}

class PersonnelSAV{
}

class PersonnelReparation{
}

Personnel <|-- PersonnelAchat
Personnel <|-- PersonnelVente
Personnel <|-- PersonnelReparation
Personnel <|-- PersonnelSAV
}

PersonnelVente "1" -- "*" Facture : réalise >
PersonnelSAV "1" -- "*" TicketPriseEnCharge : crée >
PersonnelAchat "1" -- "*" BonDeCommande : valide >
PersonnelVente "1" -- "*" BonDeCommande : crée >

class TicketPriseEnCharge {
  numeroTicket: integer {key}
  date : string 
  ticketTraité : boolean
}
TicketPriseEnCharge "0..*" -- "1" OccurenceProduit: concerne >

class BonDeCommande {
  numeroBonDeCommande: integer {key}
  date : string
  quantite : integer
  prixUnitaire : float
  bonTraité : boolean
}

BonDeCommande "0..N" -- "1" Produit: concerne >

class Reparation  {
  numeroReparation : integer{key}
  tempsPassé : float 
  materielUtilisé [0..1]: string
}

class Reprise  {
  numeroReprise : integer{key}
  contrePartie : string
}


note right of TicketPriseEnCharge
    concerne Reparation XOR concerne Reprise
end note

note "Une facture est soi une facture de reparation, de reprise ou de vente" as N1

TicketPriseEnCharge "1" -- "0..1" Reparation : concerne >
Reparation "0..1" -- "1" Facture : donne lieu >
TicketPriseEnCharge "1" -- "0..1" Reprise : concerne >
Reprise "0..1" -- "1" Facture : donne lieu >

Facture "1" -- "0..1" Vente : donne lieu <
class Vente  {
  numeroVente : integer{key}
  installationRequise : boolean 
}
@enduml